---
config:
  look: classic
  theme: dark
---
classDiagram
direction TB
    class Menu_item {
	    +str name
	    +int price
	    +calculate_total_price()
    }
    class appetizer {
	    +str type
	    +str size
	    anchos()
	    papitas()
	    patacones()
	    arepas()
    }
    class main_course {
	    +str type
	    +str size
	    hamburguesa()
	    pizza()
	    pasta()
	    pollo()
    }
    class beverage {
	    +str type
	    +str size
	    +str flavor
	    agua()
	    cocacola()
	    jugo_de_naranja()
	    cerveza()
    }
    class dessert {
	    +str type
	    +str size
	    +str flavor
	    helado()
	    torta()
	    galletas()
	    flan()
    }
    class order {
	    +int order_number
	    +int mesa
	    add_item()
	    remove_item()
	    descuesto()
	    calculate_total_bill()
    }

    Menu_item --* beverage
    Menu_item --* appetizer
    Menu_item --* main_course
    Menu_item --* dessert
    order <|-- Menu_item
